#25571 Replacing usage of ImmutableMap